# rexmapdb

./: .gitignore  README.md  Snakefile  pyproject.toml
primers/: pcr_primers_table.txt
py/: count.py  dl_genome_meta.py  download.py  download_metadata.py  extract.py  extract_test.ipynb  filter_metadata.py  generate_download_urls.py  group.py  utils.py
py/genome_assemblies/: fasta.py  gff.py  summary.py
